# sensor_system

mylibs/my_log_module/: my_log.c  my_log.h  my_ringbuffer.c  my_ringbuffer.h
mylibs/my_log_module/test/: CMakeLists.txt  main.c
mylibs/mylog_module/: my_log.c  my_log.h  my_ringbuffer.c  my_ringbuffer.h
